fixing profile image that is not showing. Will add javascript scroll animation shortly

--- a/sass/index.sass
+++ b/sass/index.sass
@@ -56,7 +56,7 @@ div
         text-align: center
         justify-content: center
         img
-            border-radius: 2rem 0 2rem 10px
+            border-radius: 50%
             border: 3px solid $secondary
         p
           font-size: 2rem
